--- a/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
+++ b/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
@@ -24,7 +24,7 @@
         <sponsor xml:id="UT22084-072-038-1512">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.5 <date>2024</date>
+                <edition>v 1.1.6 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -204,6 +204,9 @@
                 <change who="#andre" when="2024-06-26T17:20:43.642Z" type="text-version" status="1.1.5" xml:id="UT22084-072-038-1561">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-07-29T23:17:42.191Z" type="text-version" status="1.1.6" xml:id="UT22084-072-038-1562">
+                    <desc>updated links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -375,7 +378,7 @@
               <foreign xml:lang="Sa-Ltn" type="term">sambhāra</foreign>s or accumulations of merit
               (<foreign xml:lang="Sa-Ltn" type="term">puṇya)</foreign>, wisdom (<foreign xml:lang="Sa-Ltn" type="term">jñāna)</foreign>, tranquility (<foreign xml:lang="Sa-Ltn" type="term">śamatha),</foreign> and special insight (<foreign xml:lang="Sa-Ltn" type="term">vidarśanā</foreign>) according to the <title xml:lang="Sa-Ltn">Lalitavistara</title>,<note place="end" xml:id="UT22084-072-038-22"> See Dharmachakra Translation Committee,
               trans., <title xml:lang="en">The Play in Full</title>, Toh 95 (84000: Translating the
-              Words of the Buddha, 2013), <ref target="https://read.84000.co/translation/toh95.html?id=&amp;part=#UT22084-046-001-177">4.30</ref>.</note> while skillfully integrating and harmonizing other textual
+              Words of the Buddha, 2013), <ptr target="#UT22084-046-001-177"/>.</note> while skillfully integrating and harmonizing other textual
             traditions. The lowest or most basic level of religious merit (<foreign xml:lang="Sa-Ltn" type="term">puṇya</foreign>), which must be accomplished before one
             can ascend to the higher levels of the path, is represented by Borobudur’s so-called
             hidden base, which features reliefs depicting stories from the <title xml:lang="Sa-Ltn">Karmavibhaṅga</title> that illustrate the law of karma. </p>
@@ -388,7 +391,7 @@
               (1) “classification”; (2) “explanation, commentary.” For the word <foreign xml:lang="Sa-Ltn" type="term">vibhaṅga</foreign> as part of titles of Indic Buddhist
               works, see the introduction to Bruno Galasek-Hul and Lama Kunga Thartse Rinpoche,
               trans., <title xml:lang="en">Transformation of Karma</title>, Toh 339 (84000:
-              Translating the Words of the Buddha, 2021), <ref target="https://read.84000.co/translation/toh339.htm#UT22084-072-039-16">i.5</ref>–<ref target="https://read.84000.co/translation/toh339.htm#UT22084-072-039-19">i.6</ref>.
+              Translating the Words of the Buddha, 2021), <ptr target="#UT22084-072-039-16"/>–<ptr target="#UT22084-072-039-19"/>.
               Sylvain Lévi in his 1932 edition of the Sanskrit text translated the title as <title xml:lang="fr">La grande classification des actes</title> (<title xml:lang="Sa-Ltn">Mahākarma­vibhaṅga</title>, <title xml:lang="en">The Great Classification of
                 Acts</title>).</note> However, the adjective <foreign xml:lang="Sa-Ltn" type="term">mahā-</foreign> (“great”) only occurs in the title given to one of the two surviving
             nearly complete manuscripts (called MS[A] by Kudo Noriyuki),<note place="end" xml:id="UT22084-072-038-25"> Lévi has identified this appendix, which was included in
@@ -443,7 +446,7 @@
               Rinpoche, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh339.html">Transformation of
                   Karma</ref>
-                            </title> (84000: Translating the Words of the Buddha, 2021), <ref target="https://read.84000.co/translation/toh339.html#UT22084-072-039-4">i.2</ref>.</note>
+                            </title> (84000: Translating the Words of the Buddha, 2021), <ptr target="#UT22084-072-039-4"/>.</note>
                     </p>
         </div>
         <div type="section" xml:id="UT22084-072-038-introduction-6">
@@ -1422,7 +1425,7 @@
               confirmed by MS[A], which reads <foreign xml:lang="Sa-Ltn" type="quote">yamalokaḥ</foreign>. Lévi (1932, p. 46) has adopted the reading of MS[A]. The
               Sanskrit of MS[B], however, reads <foreign xml:lang="Sa-Ltn" type="quote">pretaloka</foreign>, which seems to be an alternative term for <foreign xml:lang="Sa-Ltn" type="term">yamaloka</foreign> (see also Tom Tillemans, trans.,
                 <title xml:lang="en">Questions Regarding Death and Transmigration</title>, Toh 308
-              [84000: Translating the Words of the Buddha, 2019], <ref target="https://read.84000.co/translation/toh308.html#UT22084-072-008-179">g.39</ref>). The inhabitants of the realm of the dead are also often designated
+              [84000: Translating the Words of the Buddha, 2019], <ptr target="#UT22084-072-008-179"/>). The inhabitants of the realm of the dead are also often designated
               “ghosts”; however, this particular translation is possibly more specific to a Chinese
               Buddhist cultural context. We have here opted for the translation “ghosts” because we
               see a cultural parallel in the Western concept of ghosts, but readers should keep in
@@ -1543,7 +1546,7 @@
               For an alternative rendering/interpretation, especially of the first of the four
               formless absorptions, see Karen Liljenberg, trans., <title xml:lang="en">The Question
                 of Maitreya (1)</title>, Toh 85 (84000: Translating the Words of the Buddha, 2016),
-                <ref target="https://read.84000.co/translation/toh85.html#UT22084-044-005-30">1.20</ref>.</note> Having entirely and completely transcended the sphere of
+                <ptr target="#UT22084-044-005-30"/>.</note> Having entirely and completely transcended the sphere of
             infinity of space, <ref cRef="F.282.a" type="folio" xml:id="UT22084-072-038-993"/>
             thinking, ‘Consciousness is infinite,’ one has perfected the sphere of infinity of
             consciousness and abides in it.<note place="end" xml:id="UT22084-072-038-219"> This
@@ -1658,7 +1661,7 @@
               SN I, 149ff. The name Kokālika is here translated into Tibetan as <foreign xml:lang="Bo-Ltn" type="quote">dus min</foreign> (*<foreign xml:lang="Sa-Ltn" type="term">kukālika</foreign>?), which is not attested in any dictionary. Kokālika,
               in the transliterated form <foreign xml:lang="Bo-Ltn" type="quote">ko kā li
                 ka</foreign>, also appears in <title xml:lang="en">The Limits of Life</title>
-              (<title xml:lang="Sa-Ltn">Āyuḥparyanta­sūtra</title>, Toh 307), <ref target="https://read.84000.co/translation/toh307.html#UT22084-072-007-214">1.70</ref>.</note> Action like this leads to being reborn in hell and passing away
+              (<title xml:lang="Sa-Ltn">Āyuḥparyanta­sūtra</title>, Toh 307), <ptr target="#UT22084-072-007-214"/>.</note> Action like this leads to being reborn in hell and passing away
             from there only after having completely exhausted the lifespan of the hell. </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-237"/>
           <p tid="119">“What kind of action leads to being reborn in hell and passing away from
@@ -1695,7 +1698,7 @@
                 <p>Head down like the ingredients of rice soup.</p>
                             </q> Because of the uninterrupted
               pain this hell is called mNar.med (Avīci).” See also Khenpo Könchok Gyaltsen 1989,
-              p. 98, and <title xml:lang="en">The Limits of Life</title> (<title xml:lang="Sa-Ltn">Āyuḥparyanta­sūtra</title>, Toh 307), <ref target="https://read.84000.co/translation/toh307.html#UT22084-072-007-238">1.80</ref>–<ref target="https://read.84000.co/translation/toh307.html#UT22084-072-007-251">1.84</ref>.</note> for carrying out the evil actions that bring immediate
+              p. 98, and <title xml:lang="en">The Limits of Life</title> (<title xml:lang="Sa-Ltn">Āyuḥparyanta­sūtra</title>, Toh 307), <ptr target="#UT22084-072-007-238"/>–<ptr target="#UT22084-072-007-251"/>.</note> for carrying out the evil actions that bring immediate
             retribution—namely, murdering his father, splitting the monastic saṅgha, releasing the
             wild elephant Dhanapāla,<note place="end" xml:id="UT22084-072-038-242"> This is the name
               in the Sanskrit. In fact, the elephant’s name was originally Nālāgiri, according to
