--- a/translations/kangyur/placeholders/079-014_toh387-the_tantra_of_the_great_khasama.xml
+++ b/translations/kangyur/placeholders/079-014_toh387-the_tantra_of_the_great_khasama.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal nam mkha' chen po'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīmahākhasamatantrarāja</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-014-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-30T13:38:27.646Z" type="translation-status" status="3" xml:id="UT22084-079-014-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-30T13:38:27.646Z" type="text-version" status="0.0.1" xml:id="UT22084-079-014-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
