--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -16,15 +16,16 @@
                 <author role="translatorEng" xml:id="UT22084-076-012-5">Thomas Cruijsen</author>
                 <consultant role="projectManager" xml:id="UT22084-076-012-6">Thomas Cruijsen</consultant>
                 <editor role="copyEditor" xml:id="UT22084-076-012-25">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-076-012-39">Ryan Damron</editor>
                 <sponsor xml:id="UT22084-076-012-7">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2024</date>
+                <edition>v 0.1.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-076-012"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:26:33.43Z" type="text-version" status="0.1.9" xml:id="UT22084-076-012-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:27:14.775Z" type="text-version" status="0.1.10" xml:id="UT22084-076-012-40">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T13:27:58.696Z" type="translation-status" status="2.a" xml:id="UT22084-076-012-41">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T13:27:58.696Z" type="text-version" status="0.1.11" xml:id="UT22084-076-012-42">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
