--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-061-008-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -87,6 +87,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T08:13:15.356Z" type="text-version" status="0.0.11" xml:id="UT22084-061-008-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T14:54:23.436Z" type="translation-status" status="2.c" xml:id="UT22084-061-008-38">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T14:54:23.436Z" type="text-version" status="0.0.12" xml:id="UT22084-061-008-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
