--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT22084-072-023-3">Giuliano Francisco Proença</author>
                 <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-023-21">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-023-30">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +79,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T08:54:57.947Z" type="text-version" status="0.0.10" xml:id="UT22084-072-023-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:55:31.025Z" type="text-version" status="0.0.11" xml:id="UT22084-072-023-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:11:39.018Z" type="translation-status" status="2.c" xml:id="UT22084-072-023-32">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:11:39.018Z" type="text-version" status="0.0.12" xml:id="UT22084-072-023-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
