--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -7,17 +7,19 @@
                 <title type="mainTitle" xml:lang="en">The Four Stanzas</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Caturgāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa bzhi pa/</title>
-                <author role="translatorMain" xml:id="UT22084-072-024-1"/>
+                <author role="translatorMain" xml:id="UT22084-072-024-1">Pema Yeshé Dé Translation Team</author>
                 <consultant role="projectManager" xml:id="UT22084-072-024-2">Giuliano Francisco Proença</consultant>
                 <author role="translatorEng" xml:id="UT22084-072-024-3">Giuliano Francisco Proença</author>
                 <editor role="proofreader" xml:id="UT22084-072-024-4">Daniela Espíndola</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-024-20">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-024-21">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +67,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T08:57:05.453Z" type="text-version" status="0.0.7" xml:id="UT22084-072-024-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:57:46.841Z" type="text-version" status="0.0.8" xml:id="UT22084-072-024-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:12:51.855Z" type="translation-status" status="2.c" xml:id="UT22084-072-024-23">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:12:51.855Z" type="text-version" status="0.0.9" xml:id="UT22084-072-024-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
