--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-058-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-058"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T13:24:29.528Z" type="text-version" status="0.0.11" xml:id="UT22084-091-058-26">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:30:09.063Z" type="translation-status" status="2.c" xml:id="UT22084-091-058-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:30:09.063Z" type="text-version" status="0.0.12" xml:id="UT22084-091-058-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
