--- a/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
+++ b/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
@@ -13,14 +13,15 @@
                 <author role="translatorMain" xml:id="UT22084-043-001-1">Robert Kritzer</author>
                 <author role="translatorEng" xml:id="UT22084-043-001-2">Robert Kritzer</author>
                 <editor role="projectEditor" xml:id="UT22084-043-001-18">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-001-27">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-043-001-12">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-001"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T11:17:14.86Z" type="text-version" status="0.0.12" xml:id="UT22084-043-001-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T11:18:17.834Z" type="text-version" status="0.0.13" xml:id="UT22084-043-001-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:55:06.574Z" type="translation-status" status="2.d" xml:id="UT22084-043-001-29">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T15:55:06.574Z" type="text-version" status="0.0.14" xml:id="UT22084-043-001-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
