--- a/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
+++ b/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
@@ -14,12 +14,12 @@
                 <editor role="projectEditor" xml:id="UT22084-101-042-14">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-101-042"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:41:47.478Z" type="text-version" status="0.0.9" xml:id="UT22084-101-042-18">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T16:10:33.045Z" type="translation-status" status="2.d" xml:id="UT22084-101-042-19">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T16:10:33.045Z" type="text-version" status="0.0.10" xml:id="UT22084-101-042-20">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
