--- a/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
+++ b/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-034-011-12">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-034-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -65,6 +65,12 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-09T13:20:28.08Z" type="text-version" status="0.0.4" xml:id="UT22084-034-011-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:03:40.025Z" type="translation-status" status="2.f" xml:id="UT22084-034-011-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:03:40.025Z" type="text-version" status="0.0.5" xml:id="UT22084-034-011-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
