--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-087-002-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +97,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T13:26:34.023Z" type="text-version" status="0.0.11" xml:id="UT22084-087-002-26">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:11:48.03Z" type="translation-status" status="2.c" xml:id="UT22084-087-002-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:11:48.03Z" type="text-version" status="0.0.12" xml:id="UT22084-087-002-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
