--- a/translations/kangyur/placeholders/035-018_toh44-18-chapter_18_the_tathagata_ascends_to_the_peak_of_mount_meru.xml
+++ b/translations/kangyur/placeholders/035-018_toh44-18-chapter_18_the_tathagata_ascends_to_the_peak_of_mount_meru.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-035-018-16">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-035-018"/>
             </publicationStmt>
             <sourceDesc>
@@ -69,6 +69,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:52:10.023Z" type="text-version" status="0.0.9" xml:id="UT22084-035-018-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:49:55.085Z" type="translation-status" status="2.e" xml:id="UT22084-035-018-20">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:49:55.085Z" type="text-version" status="0.0.10" xml:id="UT22084-035-018-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
