--- a/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
+++ b/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Great Sūtra on the Five and Three [Views]</title>
+                <title type="mainTitle" xml:lang="en">The Mahāsūtra on the Five and Three [Views]</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pañcatrayasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen po lnga gsum pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Pañcatrayanāmamahāsūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po lnga gsum pa zhes bya ba</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-071-008"/>
                 <date/>
             </publicationStmt>
@@ -46,6 +46,15 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-071-008-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#john" when="2024-05-15T17:22:37.883Z" type="text-version" status="0.0.5" xml:id="UT22084-071-008-6">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T10:37:41.788Z" type="translation-status" status="" xml:id="UT22084-071-008-7">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T10:37:41.788Z" type="text-version" status="0.0.6" xml:id="UT22084-071-008-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
