--- a/translations/kangyur/placeholders/043-014_toh77-the_sutra_of_vimaladattas_questions.xml
+++ b/translations/kangyur/placeholders/043-014_toh77-the_sutra_of_vimaladattas_questions.xml
@@ -4,23 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dri ma med kyis byin pas zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Vimaladattaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Vimaladatta's Questions</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dri ma med kyis byin pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vimaladattaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dri ma med kyis byin pas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavimaladatta­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dri ma med kyis byin pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《離垢施所問經》（大正藏：大寶積經無垢施菩薩應辯會第三十三）</title>
                 <author role="translatorMain" xml:id="UT22084-043-014-1"/>
-            <author role="translatorEng" xml:id="UT22084-043-014-2">Dr. Karen Liljenberg</author>
+                <author role="translatorEng" xml:id="UT22084-043-014-2">Dr. Karen Liljenberg</author>
                 <author role="translatorEng" xml:id="UT22084-043-014-3">Dr. Ulrich Pagel</author>
-    <consultant role="projectManager" xml:id="UT22084-043-014-4">Dr. Karen Liljenberg</consultant>
+                <consultant role="projectManager" xml:id="UT22084-043-014-4">Dr. Karen Liljenberg</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-043-014"/>
                 <date/>
             </publicationStmt>
@@ -42,6 +43,18 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-043-014-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-06-05T01:52:17.177Z" type="text-version" status="0.0.3" xml:id="UT22084-043-014-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-06-12T06:35:54.163Z" type="text-version" status="0.0.4" xml:id="UT22084-043-014-8">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-05T08:17:05.105Z" type="translation-status" status="2.h" xml:id="UT22084-043-014-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-05T08:17:05.105Z" type="text-version" status="0.0.5" xml:id="UT22084-043-014-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
