--- a/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
+++ b/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po lnga gsum pa zhes bya ba</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-071-008"/>
                 <date/>
             </publicationStmt>
@@ -54,6 +54,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2024-08-02T10:37:41.788Z" type="text-version" status="0.0.6" xml:id="UT22084-071-008-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-06T12:42:07.607Z" type="translation-status" status="4" xml:id="UT22084-071-008-9">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-06T12:42:07.607Z" type="text-version" status="0.0.7" xml:id="UT22084-071-008-10">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
