--- a/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
+++ b/translations/kangyur/placeholders/071-008_toh294-the_great_sutra_on_the_five_and_three_views.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po lnga gsum pa zhes bya ba</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-071-008"/>
                 <date/>
             </publicationStmt>
@@ -60,6 +60,12 @@
                     <desc>4</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-06T12:42:07.607Z" type="text-version" status="0.0.7" xml:id="UT22084-071-008-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-06T13:13:17.672Z" type="translation-status" status="3" xml:id="UT22084-071-008-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-06T13:13:17.672Z" type="text-version" status="0.0.8" xml:id="UT22084-071-008-12">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
