--- a/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
+++ b/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
@@ -7,9 +7,9 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Prophecy Concening the Girl Candrottarā</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Candrottarādārikāvyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bu mo zla mchog lung bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="zh">《童女最上月授記經》(大正藏:《佛說月上女經》)</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacandrottarā­dārikāvyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo zla mchog lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《童女最上月授記經》(大正藏:《佛說月上女經》)</title>
                 <author role="translatorMain" xml:id="UT22084-061-011-1">Annie Bien and team</author>
                 <author role="translatorEng" xml:id="UT22084-061-011-2">Annie Bien</author>
                 <editor role="projectEditor" xml:id="UT22084-061-011-3">George FitzHerbert</editor>
@@ -17,15 +17,16 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-061-011-5">Geshe Dorji Damdul</consultant>
                 <editor role="reviser" xml:id="UT22084-061-011-6">Leslie Kriesel</editor>
                 <editor role="projectEditor" xml:id="UT22084-061-011-29">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-061-011-40">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-061-011-16">Make, Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-061-011"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +95,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T11:32:14.438Z" type="text-version" status="0.0.14" xml:id="UT22084-061-011-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T11:33:15.508Z" type="text-version" status="0.0.15" xml:id="UT22084-061-011-41">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T13:52:25.519Z" type="translation-status" status="2.d" xml:id="UT22084-061-011-42">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T13:52:25.519Z" type="text-version" status="0.0.16" xml:id="UT22084-061-011-43">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
