--- a/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
+++ b/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed rnam par 'joms pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīvajrabhairava­vidāraṇatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed rnam par 'joms pa'i rgyud kyi rgyal po/</title>
-                <author role="translatorMain" xml:id="UT22084-079-036-1"/>
+                <author role="translatorMain" xml:id="UT22084-079-036-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-079-036-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-079-036-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-079-036"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +57,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:09:44.998Z" type="text-version" status="0.0.5" xml:id="UT22084-079-036-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:10:19.1Z" type="text-version" status="0.0.6" xml:id="UT22084-079-036-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:00:48.11Z" type="translation-status" status="2.f" xml:id="UT22084-079-036-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:00:48.11Z" type="text-version" status="0.0.7" xml:id="UT22084-079-036-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
