--- a/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
+++ b/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
@@ -16,13 +16,14 @@
                     gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-083-008-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-008-5">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-083-008-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-083-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -73,6 +74,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:14:27.594Z" type="text-version" status="0.0.5" xml:id="UT22084-083-008-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:15:21.888Z" type="text-version" status="0.0.6" xml:id="UT22084-083-008-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:04:49.458Z" type="translation-status" status="2.f" xml:id="UT22084-083-008-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:04:49.458Z" type="text-version" status="0.0.7" xml:id="UT22084-083-008-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
