--- a/translations/tengyur/placeholders/047-083_toh2006-gtam_rgyud_kyi_rtog_pa.xml
+++ b/translations/tengyur/placeholders/047-083_toh2006-gtam_rgyud_kyi_rtog_pa.xml
@@ -4,16 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Ritual Manual in Abbreviated Metre</title>
                 <title xml:lang="bo" type="mainTitle">གཏམ་རྒྱུད་ཀྱི་རྟོག་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">gtam rgyud kyi rtog pa/</title>
-                <title xml:lang="en" type="mainTitle">A Ritual Manual in Abbreviated Metre</title>
+                <author role="translatorMain" xml:id="UT23703-047-083-8">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-047-083-9">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT23703-047-083-10">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT23703-047-083"/>
             </publicationStmt>
             <sourceDesc>
@@ -47,6 +50,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:18:38.042Z" type="text-version" status="0.0.1" xml:id="UT23703-047-083-7">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:19:20.629Z" type="text-version" status="0.0.2" xml:id="UT23703-047-083-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:16:45.992Z" type="translation-status" status="2.f" xml:id="UT23703-047-083-12">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:16:45.992Z" type="text-version" status="0.0.3" xml:id="UT23703-047-083-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
