--- a/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Chucchundarakalpanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga zhes bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-083-020-1"/>
+                <author role="translatorMain" xml:id="UT22084-083-020-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-020-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-083-020-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-083-020"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +57,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T12:20:18.879Z" type="text-version" status="0.0.5" xml:id="UT22084-083-020-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:21:13.427Z" type="text-version" status="0.0.6" xml:id="UT22084-083-020-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:20:15.829Z" type="translation-status" status="2.f" xml:id="UT22084-083-020-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:20:15.829Z" type="text-version" status="0.0.7" xml:id="UT22084-083-020-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
