--- a/translations/kangyur/placeholders/096-021_toh772,907-the_incantation_of_mekhala.xml
+++ b/translations/kangyur/placeholders/096-021_toh772,907-the_incantation_of_mekhala.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-021-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-021"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:17:49.127Z" type="text-version" status="0.0.6" xml:id="UT22084-096-021-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:28:19.571Z" type="translation-status" status="2.h" xml:id="UT22084-096-021-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:28:19.571Z" type="text-version" status="0.0.7" xml:id="UT22084-096-021-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
