--- a/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
+++ b/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-025-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-025"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:41:19.833Z" type="text-version" status="0.0.6" xml:id="UT22084-093-025-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:35:37.876Z" type="translation-status" status="2.h" xml:id="UT22084-093-025-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:35:37.876Z" type="text-version" status="0.0.7" xml:id="UT22084-093-025-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
