--- a/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-013-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-013"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:15:06.76Z" type="text-version" status="0.0.6" xml:id="UT22084-096-013-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:42:59.683Z" type="translation-status" status="2.h" xml:id="UT22084-096-013-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:42:59.683Z" type="text-version" status="0.0.7" xml:id="UT22084-096-013-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
