--- a/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
@@ -19,11 +19,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-018-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-018"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +72,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:19:02.881Z" type="text-version" status="0.0.6" xml:id="UT22084-096-018-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:48:09.362Z" type="translation-status" status="2.h" xml:id="UT22084-096-018-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:48:09.362Z" type="text-version" status="0.0.7" xml:id="UT22084-096-018-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
