--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-061-008-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T14:54:23.436Z" type="text-version" status="0.0.12" xml:id="UT22084-061-008-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:58:14.704Z" type="translation-status" status="2.b" xml:id="UT22084-061-008-40">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-07T14:58:14.704Z" type="text-version" status="0.0.13" xml:id="UT22084-061-008-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
