--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.23 <date>2024</date>
+                <edition>v 4.48.24 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -218,6 +218,9 @@
                 </change>
                 <change who="#konchog" when="2024-08-07T01:51:18.133Z" type="text-version" status="4.48.23" xml:id="UT22084-046-001-52175">
                     <desc>Several adjustments throughout the ancillary sections.</desc>
+                </change>
+                <change who="#konchog" when="2024-08-08T01:44:56.673Z" type="text-version" status="4.48.24" xml:id="UT22084-046-001-52176">
+                    <desc>Few more minor proofing adjustments.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -651,19 +654,19 @@
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-046-001-30"/>
                     <p tid="37">Thus did I hear at one time. The Blessed One was staying in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s Park, along with a great saṅgha of twelve thousand monks. </p>
-                    <p tid="38">Among them were venerable Ājñāta­kauṇḍinya, venerable Aśvajit, venerable Bāṣpa,
-                        venerable Mahānāma, venerable Bhadrika, venerable Yaśodeva, venerable <term ref="UT22084-046-001-2866">Vimala</term>, venerable Subāhu, venerable Pūrṇa, venerable
-                        Gavāṃpati, venerable Urubilvā Kāśyapa, venerable Nadīkāśyapa, venerable Gayākāśyapa, venerable
-                        Śāriputra, venerable Mahā­maudgalyāyana, venerable Mahākāśyapa, <ref cRef="F.2.a" type="folio" xml:id="UT22084-046-001-4063"/> venerable Mahākātyāyana, venerable Mahākapphiṇa, venerable
+                    <p tid="38">Among them were the venerable Ājñāta­kauṇḍinya, the venerable Aśvajit, the venerable Bāṣpa,
+                        the venerable Mahānāma, the venerable Bhadrika, the venerable Yaśodeva, the venerable <term ref="UT22084-046-001-2866">Vimala</term>, the venerable Subāhu, the venerable Pūrṇa, the venerable
+                        Gavāṃpati, the venerable Urubilvā Kāśyapa, the venerable Nadīkāśyapa, the venerable Gayākāśyapa, the venerable
+                        Śāriputra, the venerable Mahā­maudgalyāyana, the venerable Mahākāśyapa, <ref cRef="F.2.a" type="folio" xml:id="UT22084-046-001-4063"/> the venerable Mahākātyāyana, the venerable Mahākapphiṇa, the venerable
                             Kauṣṭhila,<note place="end" xml:id="UT22084-046-001-3070"> The Sanskrit here has Kauṇḍinya,
                             who (with his title Ajñāta-) has already been mentioned. However, Negi cites this and one
                             another instance to suggest the possibility that the Tibetan <foreign type="term" xml:lang="Bo-Ltn">gsus po che</foreign> is sometimes used to refer to Kauṇḍinya.</note>
-                        venerable Cunda, venerable Pūrṇa­maitrāyaṇī­putra, venerable Aniruddha, venerable
-                            <term>Nandika</term>, venerable Kampila, venerable Subhūti, venerable Revata, <ref cRef="2" type="sanskrit"/> venerable Khadiravaṇika, venerable Amogharāja, venerable Mahāpāraṇika,
-                        venerable Vakkula, venerable <term ref="UT22084-046-001-2656">Nanda</term>, venerable Rāhula,
-                        venerable Svāgata, and venerable Ānanda.</p>
+                        the venerable Cunda, the venerable Pūrṇa­maitrāyaṇī­putra, the venerable Aniruddha, the venerable
+                        <term>Nandika</term>, the venerable Kampila, the venerable Subhūti, the venerable Revata, <ref cRef="2" type="sanskrit"/> the venerable Khadiravaṇika, the venerable Amogharāja, the venerable Mahāpāraṇika,
+                        the venerable Vakkula, the venerable <term ref="UT22084-046-001-2656">Nanda</term>, the venerable Rāhula,
+                        the venerable Svāgata, and the venerable Ānanda.</p>
                     <milestone unit="chunk" xml:id="UT22084-046-001-31"/>
-                    <p tid="39">Along with these monks were 32,000 bodhisattvas, all of whom had only a single birth
+                    <p tid="39">Along with these monks were thirty-two thousand bodhisattvas, all of whom had only a single birth
                         remaining and were adept in all the perfections of the bodhisattvas. They enjoyed all the
                         superknowledges of the bodhisattvas and had attained all the dhāraṇīs and all the confidence of
                         the bodhisattvas. They had completed all the aspirations of the bodhisattvas, understood and
@@ -20756,13 +20759,13 @@
                             <term xml:lang="bo" type="attestedSource" n="1">མོན་གྲེ།</term>
                             <note type="definition">
                                 <p>A constellation in the north, personified as a semidivine
-                                being. Here called upon for protection</p>
+                                being. Here called upon for protection.</p>
                             </note>
                         </gloss>
                     </item>
                     <item>
                         <gloss xml:id="UT22084-046-001-2447" type="place" mode="match">
-                            <term type="translationMain">Seat of Awakening</term>
+                            <term type="translationMain">seat of awakening</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">bodhimaṇḍa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byang chub snying po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱང་ཆུབ་སྙིང་པོ།</term>
@@ -27717,7 +27720,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">drang srong</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དྲང་སྲོང་།</term>
                             <note type="definition">
-                                <p>Indian <term rend="ignore">sage</term>, wise man (often a wandering ascetic or hermit). This term was also used to render <foreign xml:lang="Sa-Ltn">muni</foreign> (<foreign xml:lang="Sa-Ltn">thub pa</foreign>), see “Able One.”</p>
+                                <p>Indian <term rend="ignore">sage</term>, wise man (often a wandering ascetic or hermit). This term was also used to render <foreign xml:lang="Sa-Ltn">muni</foreign> (<foreign xml:lang="Sa-Ltn">thub pa</foreign>); see “Able One.”</p>
                             </note>
                         </gloss>
                     </item>
